# tau_axiom_extractor

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  LICENSE  README.md  __init__.py  applicable.py  axiom.py  axiom_evaluator.py  axiom_extended.py  candidate.py  decode.py  encode.py  encode_observable_operator.py  extract_tau_operators_opgraph.py  extract_tau_operators_top.py  op.py  operator_digraph_lemon.py  operator_extended.py  param_candidate.py  preprocess.py  sas3_extended.py  sas_extended.py  solver.py  state.py  stratification.py  test.py  test_all.sh  test_operator_extended.py  utils.py
opgraph/: CMakeLists.txt  __init__.py  opgraph.cc  opgraph.h  opgraph.i
test/: miconic.sas  test.py  test_encode.py  test_operator_extended.py  test_preprocess.py
test/test_cases/: gripper01_extracted.sas  sas_plan  sokoban01.pddl  sokoban01_essential.sas  sokoban01_extracted.sas  sokoban01_unnormalized.sas
test_cases/: miconic_extracted.sas
